Add random id with crypto

--- a/desafio3y4-servidor/public/index.html
+++ b/desafio3y4-servidor/public/index.html
@@ -53,7 +53,7 @@
                 <input type="text" name="title" id="" placeholder="Actualizar nombre del producto">
                 <input type="text" name="price" id="" placeholder="Actualizar precio">
                 <input type="text" name="thumbnail" id="" placeholder="Actualizar url a la foto">
-                <button>Actualizar</button>
+                <button type="submit">Actualizar</button>
             </fieldset>
         </form>
         `
